<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.adidas</groupId>
    <artifactId>assettraffickerapitest</artifactId>
    <version>0.0.1</version>
    <packaging>jar</packaging>

    <name>asset-trafficker-api-component-api-test</name>
    <description>Test Automation - adidas ASSET-TRAFFICKER-API</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <jvm.options>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
        </jvm.options>
        <parallel.tests>4</parallel.tests>
        <serenity-cucumber.version>3.7.1</serenity-cucumber.version>
<!--        <serenity-reportportal.version>1.5.9</serenity-reportportal.version>-->
        <serenity-rest-assured.version>3.7.1</serenity-rest-assured.version>
        <cucumber-java.version>7.11.2</cucumber-java.version>
        <hamcrest-library.version>2.2</hamcrest-library.version>
        <lombok.version>1.18.22</lombok.version>
        <slf4j-simple-simple.version>2.0.4</slf4j-simple-simple.version>
        <logback.classic.version>1.3.5</logback.classic.version>
        <commons-io.version>2.8.0</commons-io.version>
        <org-json.version>20220320</org-json.version>
        <cucumber-picontainer.version>6.10.4</cucumber-picontainer.version>
        <spotless.version>2.22.6</spotless.version>
        <javax.json>1.1.4</javax.json>
        <com.fasterxml.jackson.core>2.15.1</com.fasterxml.jackson.core>
        <swagger-request-validator-restassured>2.28.2</swagger-request-validator-restassured>
        <json-schema-validator>4.4.0</json-schema-validator>
        <mssql-jdbc>12.2.0.jre11</mssql-jdbc>
        <hibernate-core>6.2.0.Final</hibernate-core>
        <spring-context-support>6.0.11</spring-context-support>
        <spring-context>6.0.11</spring-context>
        <spring-data-jpa>3.1.3</spring-data-jpa>
        <hibernate-entitymanager>5.6.15.Final</hibernate-entitymanager>
        <commons-dbcp2>2.9.0</commons-dbcp2>
        <jakarta.persistence-api>3.1.0</jakarta.persistence-api>
    </properties>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
<!--        <repository>-->
<!--            <snapshots>-->
<!--                <enabled>false</enabled>-->
<!--            </snapshots>-->
<!--            <id>adidas-artifactory</id>-->
<!--            <name>artifactory</name>-->
<!--            <url>https://tools.adidas-group.com/artifactory/pea</url>-->
<!--        </repository>-->
        <repository>
            <id>confluent.io</id>
            <name>confluent.io</name>
            <url>https://packages.confluent.io/maven</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity-cucumber.version}</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.adidas.te</groupId>-->
<!--            <artifactId>serenity-reportportal-integration</artifactId>-->
<!--            <version>${serenity-reportportal.version}</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber</artifactId>
            <version>${serenity-cucumber.version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber-java.version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber-java.version}</version>
        </dependency>

        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-rest-assured</artifactId>
            <version>${serenity-rest-assured.version}</version>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>${hamcrest-library.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>


        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.classic.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${org-json.version}</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>${javax.json}</version>
        </dependency>

        <dependency>
            <groupId>javax.json</groupId>
            <artifactId>javax.json-api</artifactId>
            <version>${javax.json}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${com.fasterxml.jackson.core}</version>
        </dependency>

        <!--        Should be removed-->
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
            <version>3.18.0</version>
        </dependency>

        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-spring</artifactId>
            <version>${serenity-cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>com.atlassian.oai</groupId>
            <artifactId>swagger-request-validator-restassured</artifactId>
            <version>${swagger-request-validator-restassured}</version>
        </dependency>
        <!--        Should be removed-->
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>2.3.31</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-schema-validator</artifactId>
            <version>${json-schema-validator}</version>
        </dependency>

        <!-- Spring JPA integration -->
        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <version>${mssql-jdbc}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${hibernate-core}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${spring-context-support}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-jpa</artifactId>
            <version>3.1.3</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>${hibernate-entitymanager}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <version>${commons-dbcp2}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring-context}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>${jakarta.persistence-api}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity-cucumber.version}</version>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--Javadoc-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <show>public</show>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <java>
                        <ratchetFrom>origin/master</ratchetFrom>
                        <removeUnusedImports/>
                        <trimTrailingWhitespace/>
                        <eclipse>
                            <file>code-formatter.xml</file>
                        </eclipse>
                    </java>
                </configuration>
                <!--                <executions>-->
                <!--                    <execution>-->
                <!--                        <goals>-->
                <!--                            <goal>check</goal>-->
                <!--                        </goals>-->
                <!--                        <phase>compile</phase>-->
                <!--                    </execution>-->
                <!--                </executions>-->
            </plugin>

        </plugins>
    </build>

    <profiles>

        <profile>
            <id>TestSequential</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M5</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <argLine>${jvm.options}</argLine>
                            <includes>
                                <include>**/TestRunner*.java</include>
                            </includes>
                            <testFailureIgnore>true</testFailureIgnore>
                            <systemPropertyVariables>
                                <!--Set default properties here-->
                                <!--<properties>resources/fe/localwebdrivers/serenityLocalChrome.properties</properties>
                                <cucumber.features>src/test/resources/features/examples/fe</cucumber.features>-->
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>TestParallel</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M5</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <argLine>${jvm.options}</argLine>
                            <includes>
                                <include>**/TestRunner*.java</include>
                            </includes>
                            <testFailureIgnore>true</testFailureIgnore>
                            <parallel>all</parallel>
                            <threadCount>2</threadCount>
                            <perCoreThreadCount>false</perCoreThreadCount>
                            <!-- perCoreThreadCount
                            true -> opens a number of parallel threads equal to the value of threadCount value, multiplied by the number of cores in the machine
                            false -> opens a number of parallel threads equal to the value of threadCount value
                            -->
                            <systemPropertyVariables>
                                <!--Set default properties here-->
                                <!--<properties>resources/fe/localwebdrivers/serenityLocalChrome.properties</properties>
                                <cucumber.features>src/test/resources/features/examples/fe</cucumber.features>-->
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
